fix: Fixed white spacing on mobile version

--- a/styles/_base.css
+++ b/styles/_base.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   max-width: 1440px;
   margin: 0 auto;
